my-apps/utility/convertx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convertx
  namespace: convertx
  labels:
    app.kubernetes.io/name: convertx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: convertx
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: convertx
    spec:
      containers:
        - name: convertx
          image: ghcr.io/c4illin/convertx:latest@sha256:a64d03997fa2686608ed31121e090f21eb8e91dfd2eb06a6aba86480deabe8c1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          emptyDir: {}
