my-apps/utility/convertx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: convertx
  namespace: convertx
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: convertx
