my-apps/utility/convertx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: convertx-route
  namespace: convertx
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal-technitium
      namespace: gateway
      sectionName: https
  hostnames:
    - "convertx.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: convertx
          port: 3000
          weight: 1
